# mcp-router-eval

./: .env.example  .gitignore  LICENSE  README.md  capstone_proposal.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/raw/: SOURCE.md
docs/: README.md  build-readiness-report.md  completion-scoring-examples.md  data-inspection-toollinkos.md  feasibility-completion.md  findings-gnn-collapse.md  full-eval-gnn-config.md
docs/adr/: 0000-adr-template.md  0001-toollinkos-sole-primary-benchmark.md  0002-executor-claude-agent-sdk.md  0003-embedding-provider-interface.md  0004-completion-structural-proxy.md  0005-closure-depth-slices.md  0006-four-edge-types.md  0007-pyg-over-dgl.md  0008-graph-identity-conventions.md  0009-record-decisions-as-adrs.md  0010-gnn-model-scope.md  0011-preprocessing-stage.md  0012-execution-order-topo-sort.md  0013-edge-type-functional-split.md  0014-processed-artifact-format.md  0015-executor-mock-primary-sdk-replay.md  0016-mock-arg-synthesis.md  0017-latency-and-failure-injection.md  0018-router-interface-signals.md  0019-hybrid-fusion-convex-combination.md  0020-uniform-router-document-text.md  0021-traversal-router-expansion.md  0022-gnn-formulation-query-conditioned-scoring.md  0023-gnn-negative-sampling.md  0024-gnn-split-and-leakage.md  0025-gnn-architecture-hyperparameters.md  0026-gnn-training-setup.md  0027-homophily-local-definition.md  0028-evaluation-metrics.md  0029-validation-tuning-protocol.md  0030-completion-required-set.md  0031-gnn-popularity-debiasing.md  0032-ci-gate-ruff-config-and-collapse-lock.md
scripts/: README.md  fetch_data.py  run_full_eval.py  run_grid_search.py
src/mcp_router_eval/: __init__.py  contracts.py
src/mcp_router_eval/contract_layer/: __init__.py  attribution.py  gate.py  invariants.py
src/mcp_router_eval/data/: __init__.py  graph_build.py  loader.py  preprocess.py
src/mcp_router_eval/embedding/: __init__.py  base.py  local.py  openai_embed.py
src/mcp_router_eval/eval/: __init__.py  harness.py  metrics.py  slices.py  tuning.py
src/mcp_router_eval/executor/: __init__.py  claude_exec.py  mock_tools.py
src/mcp_router_eval/routers/: __init__.py  base.py  baselines.py  closure.py  gnn.py  gnn_models.py  gnn_train.py
tests/: test_attribution.py  test_contracts.py  test_embedding.py  test_eval_harness.py  test_eval_metrics.py  test_eval_slices.py  test_gnn_models.py  test_gnn_router.py  test_gnn_train.py  test_graph_build.py  test_integration.py  test_invariants.py  test_loader.py  test_mock_tools.py  test_preprocess.py  test_routers_bm25.py  test_routers_traversal.py  test_routers_vector.py  test_scripts.py
